# knowledge-subproject

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
config/: settings.yaml
omniparser/: __init__.py  batch.py  config.py  gpu_monitor.py  logger.py  main.py  models.py  parser_engine.py  postprocessor.py  router.py
src/: __init__.py
src/app/: cli.py  main.py  settings.py
src/knowledge_pipeline/: __init__.py  analyzer.py  cli.py  config.py  document_parser.py  models.py  obsidian_writer.py  pipeline.py  storage.py
src/markdown/: normalizer.py
src/metrics/: quality.py
src/models/: schemas.py
src/obsidian/: linker.py  obsidian_sync.py
src/parsers/: mineru_parser.py
src/pipeline/: document_pipeline.py
src/vector/: chroma_store.py  chunker.py
tests/: test_batch.py  test_chunker.py  test_config.py  test_gpu_monitor.py  test_models.py  test_normalizer.py  test_obsidian_linking.py  test_page_range.py  test_parser_engine.py  test_pipeline_e2e.py  test_postprocessor.py  test_quality_metrics.py  test_router.py
