[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-subproject"
version = "0.1.0"
description = "Document to Markdown + Obsidian knowledge ingestion pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.1",
  "pydantic>=2.7.0",
  "openai>=1.51.0",
  "pypdf>=5.0.0",
  "python-docx>=1.1.2",
  "beautifulsoup4>=4.12.3",
  "markdownify>=0.13.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
knowledge-pipeline = "knowledge_pipeline.cli:main"

