[project]
name = "knowledge-subproject"
version = "0.1.0"
description = "Document understanding pipeline with MinerU, ChromaDB, and Obsidian sync."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "typer>=0.12.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.0",
  "chromadb>=0.5.0",
  "python-multipart>=0.0.9",
  "pypdf>=4.3.0",
  "python-docx>=1.1.0",
  "python-pptx>=1.0.0",
  "python-dotenv>=1.0.1",
  "openai>=1.51.0",
  "beautifulsoup4>=4.12.3",
  "markdownify>=0.13.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[project.scripts]
knowledge-skill = "src.app.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
