[project]
name = "omniparser"
version = "0.1.0"
description = "Industrial-grade PDF-to-Markdown preprocessing system with multi-engine routing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "docling>=2.3.0",
  "pypdf>=5.0.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "openai>=1.51.0",
  "typer>=0.12.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.0",
]
gpu = [
  "pynvml>=12.0.0",
]

[project.scripts]
omniparser = "omniparser.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["omniparser*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104", "D203", "D213"]
